[package]
name = "thumbnail"
version = "0.1.0"
authors = ["sun"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
rand = "0.7"
zkp-toolkit = { git = "https://github.com/sunhuachuang/ckb-zkp", branch = "tmp" }
